syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.shopping.cart.entity;

option java_outer_classname = "CartEntity";

option (akkaserverless.file).value_entity = {
  name : "ShoppingCart"
  entity_type : "shopping_cart"
  state : "CartState"
};

message CartState {
  string cart_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp checked_out_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  google.protobuf.Timestamp delivered_utc = 5;
  google.protobuf.Timestamp deleted_utc = 6;
  repeated LineItem line_items = 7;
}

message LineItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}
